docs: expand architecture documentation